--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.12",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "esbuild": "^0.27.2",
+    "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
