--- a/.devcontainer/app/devcontainer.json
+++ b/.devcontainer/app/devcontainer.json
@@ -1,5 +1,6 @@
 {
-  "name": "Curs 17 - Vue.js",
+  "name": "Curs 17 - App",
+  "remoteUser": "node",
   "dockerComposeFile": "../../compose.yaml",
   "service": "app",
   "workspaceFolder": "/task",
