--- a/app/package.json
+++ b/app/package.json
@@ -1,39 +1,4 @@
 {
-  "name": "proiectan",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.1.0",
-    "pinia": "^3.0.4",
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.4"
-  },
-  "devDependencies": {
-    "@eslint/css": "^0.14.1",
-    "@eslint/js": "^9.39.2",
-    "@eslint/json": "^0.14.0",
-    "@eslint/markdown": "^7.5.1",
-    "@vitejs/plugin-vue": "^6.0.3",
-    "baseline-browser-mapping": "^2.9.14",
-    "esbuild": "^0.27.2",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-vue": "^10.6.2",
-    "globals": "^17.0.0",
-    "prettier": "^3.8.0",
-    "prettier-plugin-tailwindcss": "^0.7.2",
-    "vite": "^7.3.1",
-    "vite-plugin-pwa": "^1.2.0",
-    "vite-plugin-vue-devtools": "^8.0.3",
-    "vue-eslint-parser": "^10.2.0"
-  }
+  "name": "app",
+  "packageManager": "yarn@4.9.2"
 }
